# langcare-mcp-fhir

./: .dockerignore  .gitignore  .npmignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  ReleaseNotes.md  go.mod  go.sum  package.json  server.json
apps/: README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/fhir-explorer/: index.html
apps/patient-chart-review/: index.html
cli/: README.md  pyproject.toml
cli/langcare/: __init__.py  cli.py  mcp_client.py
cma/: README.md
cma/agents/: care-coordination.yaml  clinical-decision-support.yaml  clinical-triage.yaml  documentation.yaml  lab-diagnostics.yaml  medication-management.yaml  patient-data.yaml  population-health.yaml  specialty.yaml
configs/: claude_desktop_config.json  claude_desktop_config.remote.json  config.cerner.example.yaml  config.epic.example.yaml  config.example.yaml  config.gcp.example.yaml  config.openemr.example.yaml
docs/: AGENT_PROMPT.md  EPIC-APP-SECURITY.md  EPIC-SCOPES.md  FLY-DEPLOYMENT.md  LOCAL-TESTING.md  OPENEMR-APP-SECURITY.md  SECURITY.md
fly/: Dockerfile  README.md  config.fly.cerner.yaml  config.fly.epic.yaml  config.fly.gcp.yaml  docker-entrypoint.sh  fly.dev.toml
integrations/: README.md
pipecat-agent/: README.md
pipecat-agent/server/: .env.example  Dockerfile  bot.py  pcc-deploy.toml  pyproject.toml
pipecat-agent/server/prompts/: base_prompt.py
scripts/: build-apps.sh  create_jwks.sh  create_jwks_openemr.sh  postinstall.js  sync-version.js
skills/: README.md
test/: README.md  init.sh  test-cli.sh  test_epic_token.go
(+247 files in other folders)
