[project]
name = "langcare-cli"
version = "1.0.0"
description = "LangCare CLI — FHIR tools over MCP for AI agents"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["fhir", "mcp", "healthcare", "langcare", "cli"]

dependencies = [
    "click>=8.1",
    "httpx>=0.27",
]

[project.scripts]
langcare = "langcare.cli:cli"

[project.urls]
Homepage = "https://github.com/langcare/langcare-mcp-fhir"
Repository = "https://github.com/langcare/langcare-mcp-fhir"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["langcare"]
