[project]
name = "healthcare-voice-agent"
version = "0.1.0"
requires-python = ">=3.11,<3.14"
dependencies = [
    "pipecat-ai[daily,deepgram,cartesia,anthropic,silero,mcp]",
    "pipecatcloud",
    # Security pins (transitive via pipecat-ai). Explicit direct pins to
    # force the resolver onto patched versions. 2026-05-13.
    "python-dotenv>=1.2.2",     # CVE
    "aiohttp>=3.13.4",          # 10 CVEs
    "pillow>=12.2.0",           # 5 CVEs incl. high
    "nltk>=3.9.4",              # 3 CVEs incl. high
    "cryptography>=46.0.7",     # 2 CVEs
    "python-multipart>=0.0.27", # 2 CVEs incl. high
    "PyJWT>=2.12.0",            # 1 high
    "Pygments>=2.20.0",         # 1 low
    "loguru",
    "httpx",
    "fastapi>=0.134.0",
    "torch>=2.10.0",
]
